Create Gig Model

--- a/Gighub/Gighub.csproj
+++ b/Gighub/Gighub.csproj
@@ -177,9 +177,20 @@
     <Compile Include="Migrations\201711140057426_InitialModel.Designer.cs">
       <DependentUpon>201711140057426_InitialModel.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201711151047524_CreateGigTable.cs" />
+    <Compile Include="Migrations\201711151047524_CreateGigTable.Designer.cs">
+      <DependentUpon>201711151047524_CreateGigTable.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201711151113179_OverRideCOnventionsForGigsAndGenres.cs" />
+    <Compile Include="Migrations\201711151113179_OverRideCOnventionsForGigsAndGenres.Designer.cs">
+      <DependentUpon>201711151113179_OverRideCOnventionsForGigsAndGenres.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
-    <Compile Include="Models\IdentityModels.cs" />
+    <Compile Include="Models\ApplicationDbContext.cs" />
+    <Compile Include="Models\Genre.cs" />
+    <Compile Include="Models\Gig.cs" />
+    <Compile Include="Models\ApplicationUser.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
@@ -256,6 +267,12 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201711140057426_InitialModel.resx">
       <DependentUpon>201711140057426_InitialModel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201711151047524_CreateGigTable.resx">
+      <DependentUpon>201711151047524_CreateGigTable.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201711151113179_OverRideCOnventionsForGigsAndGenres.resx">
+      <DependentUpon>201711151113179_OverRideCOnventionsForGigsAndGenres.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
