--- a/Gighub/Gighub.csproj
+++ b/Gighub/Gighub.csproj
@@ -190,6 +190,10 @@
     <Compile Include="Migrations\201711151121182_PopulateGenresTable.Designer.cs">
       <DependentUpon>201711151121182_PopulateGenresTable.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201711160145226_AddForeignKeyPropertiesToModel.cs" />
+    <Compile Include="Migrations\201711160145226_AddForeignKeyPropertiesToModel.Designer.cs">
+      <DependentUpon>201711160145226_AddForeignKeyPropertiesToModel.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\ApplicationDbContext.cs" />
@@ -283,6 +287,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201711151121182_PopulateGenresTable.resx">
       <DependentUpon>201711151121182_PopulateGenresTable.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201711160145226_AddForeignKeyPropertiesToModel.resx">
+      <DependentUpon>201711160145226_AddForeignKeyPropertiesToModel.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
