--- a/Gighub/Gighub.csproj
+++ b/Gighub/Gighub.csproj
@@ -194,6 +194,10 @@
     <Compile Include="Migrations\201711160145226_AddForeignKeyPropertiesToModel.Designer.cs">
       <DependentUpon>201711160145226_AddForeignKeyPropertiesToModel.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201711180957170_AddNameToUser.cs" />
+    <Compile Include="Migrations\201711180957170_AddNameToUser.Designer.cs">
+      <DependentUpon>201711180957170_AddNameToUser.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\ApplicationDbContext.cs" />
@@ -292,6 +296,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201711160145226_AddForeignKeyPropertiesToModel.resx">
       <DependentUpon>201711160145226_AddForeignKeyPropertiesToModel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201711180957170_AddNameToUser.resx">
+      <DependentUpon>201711180957170_AddNameToUser.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
