implemented delete gigs

--- a/Gighub/Gighub.csproj
+++ b/Gighub/Gighub.csproj
@@ -183,6 +183,7 @@
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\api\AttendancesController.cs" />
     <Compile Include="Controllers\api\FollowingsController.cs" />
+    <Compile Include="Controllers\api\GigsController.cs" />
     <Compile Include="Controllers\FolloweesController.cs" />
     <Compile Include="Controllers\GigsController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
@@ -224,6 +225,10 @@
     <Compile Include="Migrations\201711190855372_AddFollowing.Designer.cs">
       <DependentUpon>201711190855372_AddFollowing.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201711210841224_AddisCancelledToGig.cs" />
+    <Compile Include="Migrations\201711210841224_AddisCancelledToGig.Designer.cs">
+      <DependentUpon>201711210841224_AddisCancelledToGig.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\ApplicationDbContext.cs" />
@@ -247,6 +252,7 @@
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="Scripts\bootbox.min.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
@@ -336,6 +342,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201711190855372_AddFollowing.resx">
       <DependentUpon>201711190855372_AddFollowing.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201711210841224_AddisCancelledToGig.resx">
+      <DependentUpon>201711210841224_AddisCancelledToGig.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
